@@ -3,7 +3,15 @@ CHANGES for LIRE
 
 2013-06-23
 ==========
-  -  Added a new distance routine to OpponentHistogram, that could prove faster when reading from an index.
+  - Added a new distance routine to OpponentHistogram, that could prove faster when reading from an index.
+  - Profiled search and found that the compressed stored fields made search awfully slow. Decompression
+    takes up to 60% search time.
+  - If an ImageSearcher starts with caching the byte[] values in memory, search time goes down rapidly.
+    Results from a test:
+      # of images in an index of OpponentHistogram = 50000
+      init time of cached search: ms = 1414
+      100 searches with the cached searcher: ms = 4186
+      100 searches with the non-cached version: ms = 106879
 
 2013-06-22
 ==========
